[project]
name = "lesson-10-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Dim",email = "kdo_kab.36@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "lesson_10"}]


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
